test/types/records/engin/parentheseslessConstError.good
parentheseslessConstError.chpl:3: error: type in 'new' expression is missing its argument list
